2016-10-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.3.3.
	* Makefile.am, version.ac: Adjusted.

2016-09-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.3.2.
	* version.ac: Adjusted.

2016-09-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.3.1.
	* version.ac: Adjusted.

2016-07-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.3.0.
	* version.ac: Adjusted.

2016-05-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.2.7.
	* version.ac: Adjusted.

2016-04-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.2.6.
	* version.ac: Adjusted.

2016-04-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.2.5.
	* version.ac: Adjusted.

2016-03-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.2.4.
	* version.ac: Adjusted.

2016-02-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.2.3.
	* version.ac: Adjusted.

2016-02-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.2.1.
	* version.ac: Adjusted.

2016-02-19  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.2.0.
	* version.ac: Adjusted.

2016-02-15  Karl Berry  <karl@tug.org>

	* harfbuzz-PATCHES: rename from harfbuzz-src-PATCHES.
	* Makefile.am (EXTRA_DIST): likewise.

2016-01-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.1.3.
	* Makefile.am: Add hb-ot-os2-table.hh.
	* version.ac: Adjusted.

2015-12-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import harfbuzz-1.1.2.
	* version.ac: Adjusted.

2015-10-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import harfbuzz-1.0.4.
	* version.ac: Adjusted.

2015-09-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import harfbuzz-1.0.3.
	* version.ac: Adjust.

2015-08-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import harfbuzz-1.0.2.
	* version.ac, Makefile.am: Adjust.

2015-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import harfbuzz-1.0.1.
	* version.ac, Makefile.am: Adjust.
