@@ -1,3 +1,8 @@
+2016-10-31  Karl Berry  <karl@tug.org>
+
+	* include/Makefile.am (hdr_links): add hb-ot-math.h
+	(else xetex build fails).
+
 2016-10-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	Import harfbuzz-1.3.3.
